# qf-agentos

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: API.md  ARCHITECTURE.md  CLI.md  CONFIGURATION.md  FINDINGS.md  PROBLEM-FAMILIES.md  real-qpu.md  research-note-quantum-extras.md
evidence/: index.jsonl
examples/: abstention-demo.yaml  collateral-allocation.yaml  fraud-detection.yaml  infeasible.yaml  payment-routing.yaml  rfq-fill.yaml  settlement-netting.yaml
scripts/: build-pdfs.py
src/qf_agentos/: __init__.py  api.py  api_jobs.py  cli.py  pipeline.py
src/qf_agentos/agents/: __init__.py  auditor.py  classical.py  classification.py  formulation.py  governance.py  planner.py  quantum_agent.py  requirements.py  util.py  verification.py
src/qf_agentos/arena/: __init__.py  report.py  runner.py
src/qf_agentos/backends/: __init__.py  base.py  dwave.py  heuristic.py  ibm_runtime.py  pennylane_backend.py  quantum.py  registry.py  solvers.py
src/qf_agentos/core/: __init__.py  artifacts.py  config.py  domain.py  errors.py  ir.py  observability.py  policy.py  result.py  state.py  workflow.py
src/qf_agentos/finance/: __init__.py  collateral.py  fraud.py  payment_routing.py  qae.py  qkernel.py  qml.py  rfq.py  settlement.py  tensor_network.py
src/qf_agentos/governance/: __init__.py  mlflow_store.py  postgres_store.py  report.py  store.py
src/qf_agentos/skills/: __init__.py
src/qf_agentos/skills/collateral_optimizer/: skill.yaml
src/qf_agentos/skills/fraud_quantum_kernel/: skill.yaml
src/qf_agentos/skills/payment_router/: skill.yaml
src/qf_agentos/skills/rfq_kernel/: skill.yaml
src/qf_agentos/skills/settlement_liquidity/: skill.yaml
src/qf_agentos/studio/: __init__.py  assets.py  index.html
studio-react/: README.md  index.html  package-lock.json  package.json  vite.config.ts
studio-react/src/: App.tsx  api.ts  markdown.ts  styles.css
tests/: conftest.py  qf_test_utils.py  test_api.py  test_arena.py  test_auditor.py  test_backends.py  test_cli.py  test_collateral.py  test_config_observability.py  test_dwave.py  test_fraud.py  test_governance.py  test_ibm_runtime.py  test_ir.py  test_payment_routing.py  test_pipeline.py  test_policy.py  test_qae.py  test_qml.py  test_registry.py  test_rfq.py  test_settlement.py  test_skills.py  test_tensor_network.py  test_workflow.py
