[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qf-agentos"
version = "0.1.0"
description = "An open-source agentic operating system for quantum finance: formulate, solve, verify, and audit financial optimisation problems across classical and quantum backends."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "QF-AgentOS contributors" }]
maintainers = [{ name = "QF-AgentOS contributors" }]
keywords = ["quantum", "finance", "optimisation", "agents", "qaoa", "collateral", "qubo"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Office/Business :: Financial",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "numpy>=1.26",
  "scipy>=1.12",       # provides scipy.optimize.milp (HiGHS) — the classical MILP baseline
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.0",
]

[project.optional-dependencies]
# Gate-model simulation + real IBM execution
qiskit = ["qiskit>=1.0", "qiskit-aer>=0.14"]
ibm = ["qiskit>=1.0", "qiskit-aer>=0.14", "qiskit-ibm-runtime>=0.20"]
pennylane = ["pennylane>=0.35"]
# D-Wave constrained-quadratic / annealing
dwave = ["dwave-ocean-sdk>=7.0"]
# REST API / service surface
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
# MLflow experiment registry (alternative to the file-based evidence store)
mlflow = ["mlflow>=2.9"]
# Postgres (SQL) evidence registry
postgres = ["sqlalchemy>=2.0", "psycopg[binary]>=3.1"]
# OpenTelemetry tracing
otel = ["opentelemetry-api>=1.24", "opentelemetry-sdk>=1.24"]
# Everything an experimenter typically wants
all = [
  "qiskit>=1.0", "qiskit-aer>=0.14", "qiskit-ibm-runtime>=0.20",
  "pennylane>=0.35", "fastapi>=0.110", "uvicorn[standard]>=0.29",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
  "httpx>=0.27",
  "build>=1.2",
]

[project.scripts]
qf-agent = "qf_agentos.cli:main"

[project.urls]
Homepage = "https://github.com/qf-agentos/qf-agentos"
Documentation = "https://github.com/qf-agentos/qf-agentos#readme"
Repository = "https://github.com/qf-agentos/qf-agentos"
Issues = "https://github.com/qf-agentos/qf-agentos/issues"
Changelog = "https://github.com/qf-agentos/qf-agentos/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Build: ship data files (py.typed marker, skill manifests) in the wheel.
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/qf_agentos"]

[tool.hatch.build.targets.wheel.force-include]
"src/qf_agentos/py.typed" = "qf_agentos/py.typed"
# Ship the example specs inside the package so QF-Studio can offer them as presets.
"examples" = "qf_agentos/studio/examples"

[tool.hatch.build]
include = [
  "src/qf_agentos/**/*.py",
  "src/qf_agentos/**/*.yaml",
  "src/qf_agentos/**/*.html",
  "src/qf_agentos/py.typed",
]

[tool.hatch.build.targets.sdist]
# The React frontend is a separate deployable (git repo only), not part of the
# Python distribution — never let its node_modules leak into the sdist.
exclude = ["studio-react"]
include = [
  "src/qf_agentos",
  "tests",
  "examples",
  "docs",
  "README.md",
  "LICENSE",
  "NOTICE",
  "CHANGELOG.md",
  "CITATION.cff",
]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "-q --strict-markers"
markers = [
  "slow: marks tests as slow (quantum simulation)",
  "quantum: requires the qiskit extra",
]
filterwarnings = [
  "ignore::scipy.sparse.SparseEfficiencyWarning",
]

[tool.coverage.run]
source = ["qf_agentos"]
branch = true
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pyflakes / pycodestyle
  "I",                 # isort
  "UP",                # pyupgrade
  "B",                 # bugbear
  "SIM",               # simplify
  "C4",                # comprehensions
  "PIE",               # misc lints
  "RUF",               # ruff-specific
]
ignore = [
  "E501",   # line length handled by formatter
  "B008",   # typer uses function calls in argument defaults by design
  "RUF012", # mutable class attrs (pydantic models manage this)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
# The PDF builder's glyph table maps these exact ambiguous characters to LaTeX maths;
# substituting the ASCII look-alikes ruff suggests would defeat its purpose.
"scripts/build-pdfs.py" = ["RUF001"]

[tool.ruff.lint.isort]
known-first-party = ["qf_agentos"]

[tool.mypy]
# Type-checked at 3.12 (numpy>=2.5 ships 3.12-syntax stubs); runtime supports 3.11+.
python_version = "3.12"
packages = ["qf_agentos"]
mypy_path = "src"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# Third-party libraries without complete type stubs.
module = [
  "qiskit.*",
  "qiskit_aer.*",
  "qiskit_ibm_runtime.*",
  "pennylane.*",
  "dwave.*",
  "dimod.*",
  "scipy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# PennyLane's qnode decorator is untyped; relax return-any there only.
module = ["qf_agentos.backends.pennylane_backend"]
disallow_untyped_decorators = false
warn_return_any = false
